objects/autopickCustObject__c.object
<CustomObject>
    <fields>
        <fullName>Autopick001__c</fullName>
        <label>Autopick001</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rec_2s__c</fullName>
        <label>Rec_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>autoPicklist__c</fullName>
        <label>autoPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>autopickCustObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>autopickCustObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>autopickCustObjects</pluralLabel>
    <recordTypes>
        <fullName>autoRecordType1</fullName>
        <active>true</active>
        <label>autoRecordType1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>